CHANGELOG
=========

0.4.1
-----

* Bump tiles-maven-plugin from 2.11 to 2.12 (#23)
* Bump kemitix-parent from 5.1.0 to 5.1.1 (#21)
* Bump assertj-core from 3.9.1 to 3.11.1 (#26)
* Bump lombok from 1.16.20 to 1.18.2 (#24)
* Bump kemitix-maven-tiles from 0.8.1 to 1.3.1 (#27)

0.4.0
-----

* Complete rewrite with new API

0.3.0
-----

* Upgrade `wrapper` to 0.3.0
* Improved byte array writing

0.2.0
-----

* Upgrade `wrapper` to 0.2.0
* Add `StringTransformPrintStreamWrapper`
* Rewrite tests using real `PrintStream` objects
* Add `ByteTransformPrintStreamWrapper`
* Add `ByteFilterPrintStreamWrapper`
* Rename `FilteredPrintStreamWrapper` as `StringFilterPrintStreamWrapper`

0.1.0
-----

* Initial release
* Add `PassthroughPrintStreamWrapper`
* Add `RedirectPrintStreamWrapper`
* Add `CopyPrintStreamWrapper`
* Add `FilteredPrintStreamWrapper`